# OOP

./: README.md  Task2
Architectural Bureau/: ArchitecturalBureau
Building/: House_Simulation
CircularBuffer/: CMakeLists.txt  CircularBufferTests  build.sh
CircularBuffer/src/: CircularBuffer.cpp
CircularBuffer/tests/: CircularBufferTests.cpp
Evolution/PartOne/: CreatureHierarchy
Evolution/PartThree/: CreatureHierarchy
Evolution/PartTwo/: CreatureHierarchy
Game_Of_Life/scripts/: build.sh
Game_Of_Life/src/: main.cpp
OOP-Task1/include/: CircularBuffer.h
Task0-a/: CMakeLists.txt  build.sh
Task0-b/: CMakeLists.txt  WordFrequencyCounter  b0  build.sh  input.txt  main.cpp  output.csv
Tasks/: Task1  Task1.cpp  Task2  Task3  Task3.cpp  Task4  Task4.cpp  compile.sh
Times/time/: time.cpp
Zoo/: FeedZoo
